# confidential-computing.tee.tools

./: .gitmodules  CONTRIBUTING.md  README.md  SECURITY.md
full-disk-encryption/: .gitignore  README.md  boot_td.sh
full-disk-encryption/fde-binaries/: Cargo.toml
full-disk-encryption/fde-binaries/src/: fde-decrypt-image.rs  fde-kbs-store-key.rs  fde-key-gen.rs
full-disk-encryption/fde-binaries/src/util_modules/: disk.rs  key_broker.rs  key_broker_client.rs  lib.rs  ovmf_var.rs  quote.rs  rsa_ext.rs
full-disk-encryption/figures/: overview_preparation.drawio  overview_runtime.drawio
full-disk-encryption/patches/: run_td_sh.patch  setup-tdx-config.patch
full-disk-encryption/tools/image/: enroll_vars.py  fde-encrypt_image.sh  netplan.yaml
full-disk-encryption/tools/image/initramfs/: modules
full-disk-encryption/tools/image/initramfs/hooks/: copy_certs  fde-decrypt-disk
full-disk-encryption/tools/image/initramfs/scripts/init-premount/: fde-agent
full-disk-encryption/tools/image/scripts/: install
