# Copyright (C) 2025 - 2026 Intel Corporation
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "fde-binaries"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fde-decrypt-image"
path = "src/fde-decrypt-image.rs"

[[bin]]
name = "fde-kbs-store-key"
path = "src/fde-kbs-store-key.rs"

[lib]
name = "utils"
path = "src/util_modules/lib.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["rustls-tls", "json", "blocking"], default-features = false}
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
efivar = "2.0.0"
zeroize = "1.8.2"
tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", tag = "DCAP_1.23" }
hex = "0.4.3"
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
kbs_protocol = { git = "https://github.com/confidential-containers/guest-components.git", tag = "v0.15.0", features = ["tdx-attester"] }
